; ModuleID = '/home/carl/AnghaBench/git/extr_commit-reach.c_repo_get_merge_bases_many.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-reach.c_repo_get_merge_bases_many.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit_list = type { i32 }
%struct.repository = type { i32 }
%struct.commit = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.commit_list* @repo_get_merge_bases_many(%struct.repository* %0, %struct.commit* %1, i32 %2, %struct.commit** %3) #0 {
  %5 = alloca %struct.repository*, align 8
  %6 = alloca %struct.commit*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.commit**, align 8
  store %struct.repository* %0, %struct.repository** %5, align 8
  store %struct.commit* %1, %struct.commit** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.commit** %3, %struct.commit*** %8, align 8
  %9 = load %struct.repository*, %struct.repository** %5, align 8
  %10 = load %struct.commit*, %struct.commit** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.commit**, %struct.commit*** %8, align 8
  %13 = call %struct.commit_list* @get_merge_bases_many_0(%struct.repository* %9, %struct.commit* %10, i32 %11, %struct.commit** %12, i32 1)
  ret %struct.commit_list* %13
}

declare dso_local %struct.commit_list* @get_merge_bases_many_0(%struct.repository*, %struct.commit*, i32, %struct.commit**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
